--- a/waveserver/README
+++ b/waveserver/README
@@ -32,7 +32,7 @@ To enable FCGI in lighttpd add the following to your configuration:
   
 server.modules   += ( "mod_fastcgi" )
 
-fastcgi.server  = ( "echo.fcgi" =>
+fastcgi.server  = ( "wave.fcgi" =>
     ( "localhost" =>
       ( "host" => "127.0.0.1"
       , "port" => 9871
